src/bindings.rs

extern "C" {
    pub fn Cronet_EngineParams_enable_brotli_get(self_: Cronet_EngineParamsPtr) -> bool;
}
extern "C" {
    pub fn Cronet_EngineParams_http_cache_mode_get(
        self_: Cronet_EngineParamsPtr,
    ) -> Cronet_EngineParams_HTTP_CACHE_MODE;
}
extern "C" {
    pub fn Cronet_EngineParams_http_cache_max_size_get(self_: Cronet_EngineParamsPtr) -> i64;
}
extern "C" {
    pub fn Cronet_EngineParams_quic_hints_size(self_: Cronet_EngineParamsPtr) -> u32;
}
extern "C" {
    pub fn Cronet_EngineParams_quic_hints_at(
        self_: Cronet_EngineParamsPtr,
        index: u32,
    ) -> Cronet_QuicHintPtr;
}
extern "C" {
    pub fn Cronet_EngineParams_quic_hints_clear(self_: Cronet_EngineParamsPtr);
}
extern "C" {
    pub fn Cronet_EngineParams_public_key_pins_size(self_: Cronet_EngineParamsPtr) -> u32;
}
extern "C" {
    pub fn Cronet_EngineParams_public_key_pins_at(
        self_: Cronet_EngineParamsPtr,
        index: u32,
    ) -> Cronet_PublicKeyPinsPtr;
}
extern "C" {
    pub fn Cronet_EngineParams_public_key_pins_clear(self_: Cronet_EngineParamsPtr);
}
extern "C" {
    pub fn Cronet_EngineParams_enable_public_key_pinning_bypass_for_local_trust_anchors_get(
        self_: Cronet_EngineParamsPtr,
    ) -> bool;
}
extern "C" {
    pub fn Cronet_EngineParams_network_thread_priority_get(self_: Cronet_EngineParamsPtr) -> f64;
}
extern "C" {
    pub fn Cronet_EngineParams_experimental_options_get(
        self_: Cronet_EngineParamsPtr,
    ) -> Cronet_String;
}
extern "C" {
    pub fn Cronet_HttpHeader_Create() -> Cronet_HttpHeaderPtr;
}
extern "C" {
    pub fn Cronet_HttpHeader_Destroy(self_: Cronet_HttpHeaderPtr);
}
extern "C" {
    pub fn Cronet_HttpHeader_name_set(self_: Cronet_HttpHeaderPtr, name: Cronet_String);
}
extern "C" {
    pub fn Cronet_HttpHeader_value_set(self_: Cronet_HttpHeaderPtr, value: Cronet_String);
}
extern "C" {
    pub fn Cronet_HttpHeader_name_get(self_: Cronet_HttpHeaderPtr) -> Cronet_String;
}
extern "C" {
    pub fn Cronet_HttpHeader_value_get(self_: Cronet_HttpHeaderPtr) -> Cronet_String;
}
extern "C" {
    pub fn Cronet_UrlResponseInfo_Create() -> Cronet_UrlResponseInfoPtr;
}
extern "C" {
    pub fn Cronet_UrlResponseInfo_Destroy(self_: Cronet_UrlResponseInfoPtr);
}
extern "C" {
    pub fn Cronet_UrlResponseInfo_url_set(self_: Cronet_UrlResponseInfoPtr, url: Cronet_String);
}
extern "C" {
    pub fn Cronet_UrlResponseInfo_url_chain_add(
        self_: Cronet_UrlResponseInfoPtr,
        element: Cronet_String,
    );
}
extern "C" {
    pub fn Cronet_UrlResponseInfo_http_status_code_set(
        self_: Cronet_UrlResponseInfoPtr,
        http_status_code: i32,
    );
}
extern "C" {
    pub fn Cronet_UrlResponseInfo_http_status_text_set(
        self_: Cronet_UrlResponseInfoPtr,
        http_status_text: Cronet_String,
    );
}
extern "C" {
    pub fn Cronet_UrlResponseInfo_all_headers_list_add(
        self_: Cronet_UrlResponseInfoPtr,
        element: Cronet_HttpHeaderPtr,
    );
}
extern "C" {
    pub fn Cronet_UrlResponseInfo_was_cached_set(
        self_: Cronet_UrlResponseInfoPtr,
        was_cached: bool,
    );
}
extern "C" {
    pub fn Cronet_UrlResponseInfo_negotiated_protocol_set(
        self_: Cronet_UrlResponseInfoPtr,
        negotiated_protocol: Cronet_String,
    );
}
extern "C" {
    pub fn Cronet_UrlResponseInfo_proxy_server_set(
        self_: Cronet_UrlResponseInfoPtr,
        proxy_server: Cronet_String,
    );
}
extern "C" {
    pub fn Cronet_UrlResponseInfo_received_byte_count_set(
        self_: Cronet_UrlResponseInfoPtr,
        received_byte_count: i64,
    );
}
extern "C" {
    pub fn Cronet_UrlResponseInfo_url_get(self_: Cronet_UrlResponseInfoPtr) -> Cronet_String;
}
extern "C" {
    pub fn Cronet_UrlResponseInfo_url_chain_size(self_: Cronet_UrlResponseInfoPtr) -> u32;
}
extern "C" {
    pub fn Cronet_UrlResponseInfo_url_chain_at(
        self_: Cronet_UrlResponseInfoPtr,
        index: u32,
    ) -> Cronet_String;
}
extern "C" {
    pub fn Cronet_UrlResponseInfo_url_chain_clear(self_: Cronet_UrlResponseInfoPtr);
}
extern "C" {
    pub fn Cronet_UrlResponseInfo_http_status_code_get(self_: Cronet_UrlResponseInfoPtr) -> i32;
}
extern "C" {
    pub fn Cronet_UrlResponseInfo_http_status_text_get(
        self_: Cronet_UrlResponseInfoPtr,
    ) -> Cronet_String;
}
extern "C" {
    pub fn Cronet_UrlResponseInfo_all_headers_list_size(self_: Cronet_UrlResponseInfoPtr) -> u32;
}
extern "C" {
    pub fn Cronet_UrlResponseInfo_all_headers_list_at(
        self_: Cronet_UrlResponseInfoPtr,
        index: u32,
    ) -> Cronet_HttpHeaderPtr;
}
extern "C" {
    pub fn Cronet_UrlResponseInfo_all_headers_list_clear(self_: Cronet_UrlResponseInfoPtr);
}
extern "C" {
    pub fn Cronet_UrlResponseInfo_was_cached_get(self_: Cronet_UrlResponseInfoPtr) -> bool;
}
extern "C" {
    pub fn Cronet_UrlResponseInfo_negotiated_protocol_get(
        self_: Cronet_UrlResponseInfoPtr,
    ) -> Cronet_String;
}
extern "C" {
    pub fn Cronet_UrlResponseInfo_proxy_server_get(
        self_: Cronet_UrlResponseInfoPtr,
    ) -> Cronet_String;
}
extern "C" {
    pub fn Cronet_UrlResponseInfo_received_byte_count_get(self_: Cronet_UrlResponseInfoPtr) -> i64;
}
extern "C" {
    pub fn Cronet_UrlRequestParams_Create() -> Cronet_UrlRequestParamsPtr;
}
extern "C" {
    pub fn Cronet_UrlRequestParams_Destroy(self_: Cronet_UrlRequestParamsPtr);
}
extern "C" {
    pub fn Cronet_UrlRequestParams_http_method_set(
        self_: Cronet_UrlRequestParamsPtr,
        http_method: Cronet_String,
    );
}
extern "C" {
    pub fn Cronet_UrlRequestParams_request_headers_add(
        self_: Cronet_UrlRequestParamsPtr,
        element: Cronet_HttpHeaderPtr,
    );
}
extern "C" {
    pub fn Cronet_UrlRequestParams_disable_cache_set(
        self_: Cronet_UrlRequestParamsPtr,
        disable_cache: bool,
    );
}
extern "C" {
    pub fn Cronet_UrlRequestParams_priority_set(
        self_: Cronet_UrlRequestParamsPtr,
        priority: Cronet_UrlRequestParams_REQUEST_PRIORITY,
    );
}
extern "C" {
    pub fn Cronet_UrlRequestParams_upload_data_provider_set(
        self_: Cronet_UrlRequestParamsPtr,
        upload_data_provider: Cronet_UploadDataProviderPtr,
    );
}
extern "C" {
    pub fn Cronet_UrlRequestParams_upload_data_provider_executor_set(
        self_: Cronet_UrlRequestParamsPtr,
        upload_data_provider_executor: Cronet_ExecutorPtr,
    );
}
extern "C" {
    pub fn Cronet_UrlRequestParams_allow_direct_executor_set(
        self_: Cronet_UrlRequestParamsPtr,
        allow_direct_executor: bool,
    );
}
extern "C" {
    pub fn Cronet_UrlRequestParams_annotations_add(
        self_: Cronet_UrlRequestParamsPtr,
        element: Cronet_RawDataPtr,
    );
}
extern "C" {
    pub fn Cronet_UrlRequestParams_request_finished_listener_set(
        self_: Cronet_UrlRequestParamsPtr,
        request_finished_listener: Cronet_RequestFinishedInfoListenerPtr,
    );
}
extern "C" {
    pub fn Cronet_UrlRequestParams_request_finished_executor_set(
        self_: Cronet_UrlRequestParamsPtr,
        request_finished_executor: Cronet_ExecutorPtr,
    );
}
extern "C" {
    pub fn Cronet_UrlRequestParams_idempotency_set(
        self_: Cronet_UrlRequestParamsPtr,
        idempotency: Cronet_UrlRequestParams_IDEMPOTENCY,
    );
}
extern "C" {
    pub fn Cronet_UrlRequestParams_http_method_get(
        self_: Cronet_UrlRequestParamsPtr,
    ) -> Cronet_String;
}
extern "C" {
    pub fn Cronet_UrlRequestParams_request_headers_size(self_: Cronet_UrlRequestParamsPtr) -> u32;
}
extern "C" {
    pub fn Cronet_UrlRequestParams_request_headers_at(
        self_: Cronet_UrlRequestParamsPtr,
        index: u32,
    ) -> Cronet_HttpHeaderPtr;
}
extern "C" {
    pub fn Cronet_UrlRequestParams_request_headers_clear(self_: Cronet_UrlRequestParamsPtr);
}
extern "C" {
    pub fn Cronet_UrlRequestParams_disable_cache_get(self_: Cronet_UrlRequestParamsPtr) -> bool;
}
extern "C" {
    pub fn Cronet_UrlRequestParams_priority_get(
        self_: Cronet_UrlRequestParamsPtr,
    ) -> Cronet_UrlRequestParams_REQUEST_PRIORITY;
}
extern "C" {
    pub fn Cronet_UrlRequestParams_upload_data_provider_get(
        self_: Cronet_UrlRequestParamsPtr,
    ) -> Cronet_UploadDataProviderPtr;
}
extern "C" {
    pub fn Cronet_UrlRequestParams_upload_data_provider_executor_get(
        self_: Cronet_UrlRequestParamsPtr,
    ) -> Cronet_ExecutorPtr;
}
extern "C" {
    pub fn Cronet_UrlRequestParams_allow_direct_executor_get(
        self_: Cronet_UrlRequestParamsPtr,
    ) -> bool;
}
extern "C" {
    pub fn Cronet_UrlRequestParams_annotations_size(self_: Cronet_UrlRequestParamsPtr) -> u32;
}
extern "C" {
    pub fn Cronet_UrlRequestParams_annotations_at(
        self_: Cronet_UrlRequestParamsPtr,
        index: u32,
    ) -> Cronet_RawDataPtr;
}
extern "C" {
    pub fn Cronet_UrlRequestParams_annotations_clear(self_: Cronet_UrlRequestParamsPtr);
}
extern "C" {
    pub fn Cronet_UrlRequestParams_request_finished_listener_get(
        self_: Cronet_UrlRequestParamsPtr,
    ) -> Cronet_RequestFinishedInfoListenerPtr;
}
extern "C" {
    pub fn Cronet_UrlRequestParams_request_finished_executor_get(
        self_: Cronet_UrlRequestParamsPtr,
    ) -> Cronet_ExecutorPtr;
}
extern "C" {
    pub fn Cronet_UrlRequestParams_idempotency_get(
        self_: Cronet_UrlRequestParamsPtr,
    ) -> Cronet_UrlRequestParams_IDEMPOTENCY;
}
extern "C" {
    pub fn Cronet_DateTime_Create() -> Cronet_DateTimePtr;
}
extern "C" {
    pub fn Cronet_DateTime_Destroy(self_: Cronet_DateTimePtr);
}
extern "C" {
    pub fn Cronet_DateTime_value_set(self_: Cronet_DateTimePtr, value: i64);
}
extern "C" {
    pub fn Cronet_DateTime_value_get(self_: Cronet_DateTimePtr) -> i64;
}
extern "C" {
    pub fn Cronet_Metrics_Create() -> Cronet_MetricsPtr;
}
extern "C" {
    pub fn Cronet_Metrics_Destroy(self_: Cronet_MetricsPtr);
}
extern "C" {
    pub fn Cronet_Metrics_request_start_set(
        self_: Cronet_MetricsPtr,
        request_start: Cronet_DateTimePtr,
    );
}
extern "C" {
    pub fn Cronet_Metrics_request_start_move(
        self_: Cronet_MetricsPtr,
        request_start: Cronet_DateTimePtr,
    );
}
extern "C" {
    pub fn Cronet_Metrics_dns_start_set(self_: Cronet_MetricsPtr, dns_start: Cronet_DateTimePtr);
}
extern "C" {
    pub fn Cronet_Metrics_dns_start_move(self_: Cronet_MetricsPtr, dns_start: Cronet_DateTimePtr);
}
extern "C" {
    pub fn Cronet_Metrics_dns_end_set(self_: Cronet_MetricsPtr, dns_end: Cronet_DateTimePtr);
}
extern "C" {
    pub fn Cronet_Metrics_dns_end_move(self_: Cronet_MetricsPtr, dns_end: Cronet_DateTimePtr);
}
extern "C" {
    pub fn Cronet_Metrics_connect_start_set(
        self_: Cronet_MetricsPtr,
        connect_start: Cronet_DateTimePtr,
    );
}
extern "C" {
    pub fn Cronet_Metrics_connect_start_move(
        self_: Cronet_MetricsPtr,
        connect_start: Cronet_DateTimePtr,
    );
}
extern "C" {
    pub fn Cronet_Metrics_connect_end_set(
        self_: Cronet_MetricsPtr,
        connect_end: Cronet_DateTimePtr,
    );
}
extern "C" {
    pub fn Cronet_Metrics_connect_end_move(
        self_: Cronet_MetricsPtr,
        connect_end: Cronet_DateTimePtr,
    );
}
extern "C" {
    pub fn Cronet_Metrics_ssl_start_set(self_: Cronet_MetricsPtr, ssl_start: Cronet_DateTimePtr);
}
extern "C" {
    pub fn Cronet_Metrics_ssl_start_move(self_: Cronet_MetricsPtr, ssl_start: Cronet_DateTimePtr);
}
extern "C" {
    pub fn Cronet_Metrics_ssl_end_set(self_: Cronet_MetricsPtr, ssl_end: Cronet_DateTimePtr);
}
extern "C" {
    pub fn Cronet_Metrics_ssl_end_move(self_: Cronet_MetricsPtr, ssl_end: Cronet_DateTimePtr);
}
extern "C" {
    pub fn Cronet_Metrics_sending_start_set(
        self_: Cronet_MetricsPtr,
        sending_start: Cronet_DateTimePtr,
    );
}
extern "C" {
    pub fn Cronet_Metrics_sending_start_move(
        self_: Cronet_MetricsPtr,
        sending_start: Cronet_DateTimePtr,
    );
}
